# ESP-IDF

EXAMPLE_I2C/MASTER/main/: main.c
EXAMPLE_I2C/SLAVE/main/: main.c
EXAMPLE_SPI/MASTER/main/: CMakeLists.txt  ketnoi1v1.c  truonghop2.c
EXAMPLE_SPI/SLAVE/main/: app_main.c
LORA_CLIENT/: CMakeLists.txt
LORA_CLIENT/library_lora_client/button_and_pwm/: button_and_pwm.c  button_and_pwm.h
LORA_CLIENT/library_lora_client/library_uart/: library_uart.h
LORA_CLIENT/main/: main.c
MQTT_ESP32_KEYPAD_LCD/: CMakeLists.txt  sdkconfig  sdkconfig.old
MQTT_ESP32_KEYPAD_LCD/main/: CMakeLists.txt  app_main.c  read_adc_oneshot.c  test_keypad.c  test_lcd.c  test_mqtt.c  use_gp2timer.c  use_gptimer.c
MQTT_ESP32_KEYPAD_LCD/mdns/button_and_pwm/: CMakeLists.txt  button_and_pwm.c  button_and_pwm.h
MQTT_ESP32_KEYPAD_LCD/mdns/dht/: dht.h
MQTT_ESP32_KEYPAD_LCD/mdns/esp_idf_lib_helpers/: CMakeLists.txt
MQTT_ESP32_KEYPAD_LCD/mdns/espconfiguration/: CMakeLists.txt  espconfiguration.c  espconfiguration.h
MQTT_ESP32_KEYPAD_LCD/mdns/keypad/: CMakeLists.txt  keypad.c  keypad.h
MQTT_ESP32_KEYPAD_LCD/mdns/library_mqtt_broker/: CMakeLists.txt  library_mqtt_broker.c  library_mqtt_broker.h
MQTT_ESP32_KEYPAD_LCD/mdns/library_uart/: CMakeLists.txt  library_uart.c
MQTT_ESP32_KEYPAD_LCD/mdns/nvs_memory/: CMakeLists.txt  nvs_memory.c
MQTT_ESP32_KEYPAD_LCD/mdns/nvs_memory/include/: nvs_memory.h
MQTT_ESP32_KEYPAD_LCD/mdns/use_gptimer/: CMakeLists.txt  use_gptimer.c  use_gptimer.h
MQTT_ESP32_KEYPAD_LCD/mdns/wifi_manager/src/: dns_server.c  wifi_manager.h
(+1 files in other folders)
